--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -1,23 +1,52 @@
-.login_container {
+.container {
     margin: 10px;
     display: grid;
-    justify-content: center;
-    width: 290px;
+    width: 300px;
     border: 1px solid #282c34;
     height: 200px;
     align-items: center;
 }
 
-.login_button {
-    background: #006400;
+.header {
+    width: 100%;
+    height: 50px;
+    background: #e6282b;
+    display: grid;
+    grid-template-columns: 90px auto;
+    align-items: center;
+    margin-bottom: 15px;
     color: #fff;
+}
+
+.logo {
+    background-image: url(images/sb_logo.png);
+    background-repeat: no-repeat;
+    background-size: 35px;
     height: 30px;
-    border: 1px solid #bbb;
+    margin-left: 10px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.form_container {
+    display: grid;
+    justify-content: center;
+}
+
+.login_button {
+    background: #fff;
+    color: #000;
+    height: 30px;
+    border: 1px solid #e6282b;
     width: 100px;
     margin-top: 10px;
 }
 
 .login_button:hover{
-    filter: brightness(150%);
+    cursor: pointer;
+    filter: brightness(98%);
 }
 
