--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,39 @@
 body {
     font-family: 'Oswald', sans-serif;
 }
+
+#leaderator-container.open{
+    animation: slide 0.5s forwards;
+    animation-delay: 2s;
+}
+
+.leaderator-iframe {
+    height: 100%;
+    width: 300px;
+    z-index: 99999;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    background: #f8f9fa;
+}
+
+.leaderator-toggle {
+    display: grid;
+    align-items: center;
+    position: fixed;
+    border-bottom-left-radius: 25px;
+    border-top-left-radius: 25px;
+    top: 0;
+    z-index: 999999;
+    background: #e6282b;
+    cursor: pointer;
+    color: #fff;
+    height: 50px;
+    width: 35px;
+    margin-top: 40px;
+}
+
+.open i{
+    transition: transform .8s ease-in-out;
+    transform: rotate(180deg);
+}
