--- a/src/components/leaderator/leaderator.module.css
+++ b/src/components/leaderator/leaderator.module.css
@@ -1,4 +1,29 @@
 .container {
     font-family: 'Dosis', sans-serif;
     width: 300px;
+    margin-top: 40px;
+}
+
+.header {
+    width: 100%;
+    height: 50px;
+    background: #e6282b;
+    display: grid;
+    grid-template-columns: 90px auto;
+    align-items: center;
+    margin-bottom: 15px;
+    color: #fff;
+}
+
+.logo {
+    background-image: url(images/sb_logo.png);
+    background-repeat: no-repeat;
+    background-size: 35px;
+    height: 30px;
+    margin-left: 10px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 700;
 }
